c8-ingress-with-toolkit.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: c8-labs-32-ingress
  namespace: c8-labs-32
  labels:
    app: camunda-platform
    app.kubernetes.io/instance: c8-labs-32
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: camunda-platform
    app.kubernetes.io/part-of: camunda-platform
    helm.sh/chart: camunda-platform-12.0.0-alpha4  
  annotations:
    kubernetes.io/ingress.class: "gce"
    meta.helm.sh/release-name: c8-labs-32
    meta.helm.sh/release-namespace: c8-labs-32
    kubernetes.io/ingress.allow-http: "false"  # on ingress, we only allow HTTPS. 
    networking.gke.io/managed-certificates: c8-managed-cert
    networking.gke.io/backend-protocol: "HTTP"  # Tell GKE to use HTTP to backend
    #cloud.google.com/healthcheck-path: "/console"
spec:
  ingressClassName: "gce"
  rules:
    - host: c8-labs-32.makelabs.in
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-landing-page-service
                port:
                  number: 80
          - path: /console
            pathType: Prefix
            backend:
              service:
                name: c8-labs-32-console
                port:
                  number: 80
          - path: /operate
            pathType: Prefix
            backend:
              service:
                name: c8-labs-32-operate
                port:
                  number: 80
          - path: /tasklist
            pathType: Prefix
            backend:
              service:
                name: c8-labs-32-tasklist
                port:
                  number: 80
          - path: /optimize
            pathType: Prefix
            backend:
              service:
                name: c8-labs-32-optimize
                port:
                  number: 80
          - path: /auth/
            pathType: Prefix
            backend:
              service:
                name: c8-labs-32-keycloak
                port:
                  number: 80
          - path: /identity
            pathType: Prefix
            backend:
              service:
                name: c8-labs-32-identity
                port:
                  number: 80
          - path: /connectors
            pathType: Prefix
            backend:
              service:
                name: c8-labs-32-connectors
                port:
                  number: 8080
          - path: /zeebe
            pathType: Prefix
            backend:
              service:
                name: c8-labs-32-zeebe-gateway
                port:
                  number: 8080
          - path: /ml-api
            pathType: Prefix
            backend:
              service:
                name: toolkit-service
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: c8-labs-32-identity
  namespace: c8-labs-32
  annotations:
    cloud.google.com/backend-config: '{"default": "identity-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 82
      targetPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: c8-labs-32-connectors
  namespace: c8-labs-32
  annotations:
    cloud.google.com/backend-config: '{"default": "connectors-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: c8-labs-32-operate
  namespace: c8-labs-32
  annotations:
    cloud.google.com/backend-config: '{"default": "operate-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9600
      targetPort: 9600
---
apiVersion: v1
kind: Service
metadata:
  name: c8-labs-32-tasklist
  namespace: c8-labs-32
  annotations:
    cloud.google.com/backend-config: '{"default": "tasklist-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9600
      targetPort: 9600
---
apiVersion: v1
kind: Service
metadata:
  name: c8-labs-32-console
  namespace: c8-labs-32
  annotations:
    cloud.google.com/backend-config: '{"default": "console-backendconfig"}'
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9100
      targetPort: 9100
